fix: update styles in DownloadFile, FilterBar, and ContentBox components for improved layout and spacing

--- a/src/components/DownloadFile/DownloadFile.module.css
+++ b/src/components/DownloadFile/DownloadFile.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     background: #fff;
-    padding: 2.2rem 1.7rem 1.2rem 0rem;
+    padding: 2rem 1rem ;
     border-radius: 0.8rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     /* width: ; */
