--- a/src/styles/modules/layout/ContentBox.module.css
+++ b/src/styles/modules/layout/ContentBox.module.css
@@ -5,5 +5,8 @@
   height: 100%;
   overflow: hidden;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
